# xlOS

./: .gitignore  AUDIT.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  REPO_MAP.md  SECURITY.md  mkdocs.yml  pyproject.toml  repo-map.json  requirements.txt
.github/: CODEOWNERS
.github/workflows/: lint.yml  marketplace.yml  pages.yml  release.yml  test.yml  validate.yml
agents/creator/ab-test-suggester/: grok-install.yaml
agents/creator/analytics-summarizer/: grok-install.yaml
agents/creator/brand-voice-trainer/: grok-install.yaml
agents/creator/comment-engagement-booster/: grok-install.yaml
agents/creator/competitor-watch/: grok-install.yaml
agents/creator/content-calendar-builder/: grok-install.yaml
agents/creator/content-idea-generator/: grok-install.yaml
agents/creator/content-recycler/: grok-install.yaml
agents/creator/cross-platform-reposter/: grok-install.yaml
agents/creator/daily-briefing-agent/: grok-install.yaml
agents/creator/dm-triager/: grok-install.yaml
agents/creator/follower-quality-analyzer/: grok-install.yaml
agents/creator/growth-experiment-runner/: grok-install.yaml
agents/creator/hashtag-strategy-advisor/: grok-install.yaml
agents/creator/mention-summarizer/: grok-install.yaml
agents/creator/monetization-optimizer/: grok-install.yaml
agents/creator/niche-influencer-finder/: grok-install.yaml
agents/creator/quote-tweet-suggestor/: grok-install.yaml
agents/creator/reply-drafter/: grok-install.yaml
agents/creator/research-assistant/: grok-install.yaml
agents/creator/thread-builder/: grok-install.yaml
agents/creator/trend-aligned-poster/: grok-install.yaml
agents/finance/x-creator-payout-optimizer/: grok-install.yaml
agents/finance/x-money-companion-dashboard/: grok-install.yaml
agents/finance/x-money-vision-analyzer/: grok-install.yaml
agents/finance/x-smart-cashtag-alpha-engine/: grok-install.yaml
agents/flagship/creator-x-co-pilot/: README.md  grok-install.yaml
agents/super-agents/agent-swarm-with-shared-memory/: grok-install.yaml
agents/super-agents/cross-reality-action-fabric/: grok-install.yaml
agents/super-agents/living-narrative-fabric/: README.md  grok-install.light.yaml  grok-install.yaml
agents/super-agents/narrative-contradiction-detector/: grok-install.yaml
agents/super-agents/provenance-first-trust-engine/: grok-install.yaml
agents/super-agents/self-evolving-personal-os/: grok-install.yaml
agents/super-agents/zero-config-i-want-to-agent/: grok-install.yaml
assets/brand/: CINNABAR-GLASS.md  README.md  colors.css  tokens.css  tokens.json  typography.md
docs/: index.md
docs/cli/: reference.md
docs/constitution/: index.md
docs/ecosystem/: index.md  litellm.md  semantic-kernel.md  xai-sdk.md
docs/getting-started/: deploy.md  first-agent.md  index.md  installation.md
docs/guides/: deployment.md  index.md  multi-agent-swarms.md  safety-profiles.md  tool-schemas.md  x-integration.md
docs/migration/: v215-to-v214-extensions.md
docs/v2.12/: index.md
docs/v2.12/spec/: grok-agent-yaml.md  grok-install-yaml.md  grok-prompts-yaml.md  grok-security-yaml.md  grok-workflow-yaml.md  index.md
docs/v2.13/: index.md  migration-from-v2.12.md  release-notes.md
docs/v2.13/spec/: grok-agent-yaml.md  grok-analytics-yaml.md  grok-config-yaml.md  grok-deploy-yaml.md  grok-docs-yaml.md  grok-prompts-yaml.md  grok-security-yaml.md  grok-test-yaml.md  grok-tools-yaml.md  grok-ui-yaml.md  grok-update-yaml.md  grok-workflow-yaml.md  index.md
docs/v2.14/: accessibility.md  index.md  migration.md  visuals.md
extensions/browser/: README.md  background.js  manifest.json
extensions/browser/content/: detect-yaml.js  install-flow.css  install-flow.js
extensions/browser/icons/: README.md
extensions/browser/options/: options.html  options.js
extensions/browser/popup/: popup.css  popup.html  popup.js
grok-install/: README.md
grok-install/mint/: dashboard.html  safe-agent-builder.html
grok-install/standard/: README.md
grok-install/templates/: creator-template.heavy.yaml  creator-template.light.yaml  super-agent.heavy.yaml
grok-install/validator/: validate.py
marketplace/: .env.example  biome.json  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vercel.json  vitest.config.ts
marketplace/migrations/: 001_telemetry.sql
marketplace/scripts/: build-agents-index.mjs
marketplace/src/app/: globals.css  layout.tsx  not-found.tsx  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts
marketplace/src/data/: agents-index.generated.json  featured-agents.mock.json
marketplace/src/lib/: agents.ts  brand.ts  constants.ts  github.ts  installs.ts  plausible.ts  sections.ts  telemetry-queries.ts  telemetry-schema.ts  tracking.ts  (+3 more)
scripts/: build_repo_map.py
spec/v2.14/: README.md  VENDOR.md  schema.json
src/xlos/: __init__.py  cli.py  install.py  runtime.py
tests/: test_all_agents.py  test_cli.py  test_creator_x_co_pilot.py  test_cross_platform.py  test_doctor.py  test_install.py  test_listing.py  test_lnf_recovery.py  test_runner.py  test_safety.py  test_validate.py
tools/: README.md
tools/03-contextual-reply-suggester/: README.md  SPEC.md
tools/04-pre-post-virality-scorer/: README.md  index.html
tools/05-pinned-post-ab-rotator/: README.md  index.html
tools/06-digital-product-storefront/: README.md  SPEC.md
tools/07-content-compound-calculator/: README.md  index.html
tools/11-ghostwriter-mode-with-memory/: README.md  SPEC.md
tools/12-controversy-detector/: README.md  index.html
tools/13-thread-to-newsletter-converter/: README.md  SPEC.md
tools/16-follower-migration-assistant/: README.md  SPEC.md
tools/17-post-necromancer/: README.md  SPEC.md
tools/19-grok-thread-composer/: .env.example  README.md  SPEC.md  package.json
tools/20-x-articles-optimizer/: README.md  SPEC.md
(+113 files in other folders)
